# two_band_model

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  inp  inp_ms  inp_sc  inp_sc_2d  panda  run.sh
analysis/: chirped_pulse.f90  dirac_cone.f90  dirac_phonon.f90  epsilon.f90  ft_hhg.f90  jdos_t.f90  perturbation_expantion.f90  sdos.f90
example/: eps_i.eps  plot.plt  plot.plt~
object/: dummy.dummy
post_process/: ft_hhg.f90
src/: CMakeLists.txt  current.f90  current_ms.f90  dt_evolve.f90  dt_evolve_ms.f90  energy.f90  energy_calc.f90  excited_electron.f90  global_variables.f90  global_variables_ms.f90  input_Ac.f90  input_Ac_ms.f90  main.f90  mpi_mod.f90  multi_scale.f90  preparation.f90  preparation_ms.f90  set_deps.f90  single_cell.f90  write_field_iter.f90  write_results.f90
src/analysis/: CMakeLists.txt  energy.f90  excited_electron.f90  excited_electron_k_resolved.f90  excited_electron_ph_energy_resolved.f90
src/main/: CMakeLists.txt  single_cell.f90
src/modules/: CMakeLists.txt  global_variables.f90  mpi_mod.f90
src/multi_scale/: CMakeLists.txt  input_Ac_ms.f90  multi_scale.f90  prop_Ac_ms.f90  prop_elec_ms.f90
src/preparation/: CMakeLists.txt  add_impulsive_distortion.f90  input_Ac.f90  preparation.f90  set_ddeps_dkz.f90
src/propagation/: CMakeLists.txt  dt_evolve.f90
src/two_dimensional/: CMakeLists.txt  current_2d.f90  dt_evolve_2d.f90  global_variables_2d.f90  input_Ac_2d.f90  preparation_2d.f90  set_band_velocity_2d.f90  set_deps_2d.f90  single_cell_2d.f90
tools/: FT_tr.f90
